# poetry-plugin-migrate

./: .codecov.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
poetry_plugin_migrate/: command.py  migrator.py  plugin.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/fixtures/local_absolute_package/: pyproject.toml
tests/fixtures/local_package/: pyproject.toml
tests/fixtures/poetry18/: non-interactive.expected.tpl.toml  pyproject.tpl.toml
tests/fixtures/simple-project/: non-interactive.expected.tpl.toml  pyproject.toml  pyproject.tpl.toml
tests/fixtures/simple-project/simple_project/: __main__.py
